hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tapply_enum.php.exp
File "tapply_enum.php", line 9, characters 10-14:
Invalid return type (Typing[4110])
File "tapply_enum.php", line 8, characters 15-17:
This is a value of Pos
File "tapply_enum.php", line 4, characters 17-23:
It is incompatible with a dynamic value
